# monkeybee-pdf

./: AGENTS.md  Cargo.toml  Jeffrey_Tweets.txt  Monkeybee_SPEC_hybrid_revisions.patch  NORTH_STAR.md  README.md  README_hybrid_revised.md  README_hybrid_revisions.patch  SPEC.md  implementation_master_hybrid_revisions.patch
.apr/: config.yaml
.apr/rounds/monkeybee-pdf/: round_1.md  round_10.md  round_10_truncated.md  round_11.md  round_12.md  round_13.md  round_14.md  round_15.md  round_16.md  round_17.md  round_18.md  round_19.md  round_2.md  round_20.md  round_21.md  round_22.md  round_23.md  round_24.md  round_25.md  round_3.md  round_4.md  round_5.md  round_6.md  round_7.md  round_8.md  round_9.md
.apr/workflows/: monkeybee-pdf.yaml
crates/monkeybee-3d/: Cargo.toml
crates/monkeybee-3d/src/: lib.rs
crates/monkeybee-annotate/: Cargo.toml
crates/monkeybee-annotate/src/: lib.rs
crates/monkeybee-cli/: Cargo.toml
crates/monkeybee-cli/src/: main.rs
crates/monkeybee-core/: Cargo.toml
crates/monkeybee-core/src/: lib.rs
crates/monkeybee-extract/: Cargo.toml
crates/monkeybee-extract/src/: lib.rs
crates/monkeybee-forensics/: Cargo.toml
crates/monkeybee-forensics/src/: lib.rs
crates/monkeybee-gpu/: Cargo.toml
crates/monkeybee-gpu/src/: lib.rs
crates/monkeybee-parser/: Cargo.toml
crates/monkeybee-parser/src/: lib.rs
crates/monkeybee-proof/: Cargo.toml
crates/monkeybee-proof/src/: lib.rs
crates/monkeybee-render/: Cargo.toml
crates/monkeybee-render/src/: lib.rs
crates/monkeybee-write/: Cargo.toml
crates/monkeybee-write/src/: lib.rs
docs/architecture/: asupersync_deep_integration_analysis.md
docs/implementation/: implementation_master.md
docs/testing/: coverage-matrix.md  e2e-playbook.md  logging-and-artifacts.md  pathological-corpus.md  perf-baselines.md  reference-validation.md  roundtrip-harness.md
