[workspace]
resolver = "2"
members = [
    "crates/monkeybee-core",
    "crates/monkeybee-parser",
    "crates/monkeybee-render",
    "crates/monkeybee-write",
    "crates/monkeybee-annotate",
    "crates/monkeybee-extract",
    "crates/monkeybee-proof",
    "crates/monkeybee-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nohomedirectory/monkeybee-pdf"
description = "Memory-safe, high-performance Rust PDF engine for ugly real-world PDFs"

[workspace.dependencies]
# Shared across crates — pin versions
thiserror = "2"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
image = "0.25"
clap = { version = "4", features = ["derive"] }

# Internal crate deps
monkeybee-core = { path = "crates/monkeybee-core" }
monkeybee-parser = { path = "crates/monkeybee-parser" }
monkeybee-render = { path = "crates/monkeybee-render" }
monkeybee-write = { path = "crates/monkeybee-write" }
monkeybee-annotate = { path = "crates/monkeybee-annotate" }
monkeybee-extract = { path = "crates/monkeybee-extract" }
monkeybee-proof = { path = "crates/monkeybee-proof" }

[workspace.dev-dependencies]
pretty_assertions = "1"
