[package]
name = "monkeybee-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core document model, object graph, and shared infrastructure for Monkeybee PDF"

[dependencies]
thiserror.workspace = true
indexmap.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
