[package]
name = "monkeybee-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extraction and inspection for Monkeybee PDF"

[dependencies]
monkeybee-core.workspace = true
monkeybee-render.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
