[package]
name = "monkeybee-proof"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Automated validation and evidence harness for Monkeybee PDF"

[dependencies]
monkeybee-core.workspace = true
monkeybee-parser.workspace = true
monkeybee-render.workspace = true
monkeybee-write.workspace = true
monkeybee-annotate.workspace = true
monkeybee-extract.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
